...
                    ? state.apps
                        .where((app) => app.appName.toLowerCase().contains(
                            widget.searchApplicationTerm!.toLowerCase()))
                        .toList()
                    : state.apps;
                return CustomCheckboxGroup(
                  key: const Key("App Checkboxes"),
                  onChanged: _onAppCheckBoxChanged,
                  name: 'apps',
                  items: filteredApps,
                  content: (app) => AppRow(app: app, key: Key(app.appName)),
                  initialValue: widget.blockCubit.state.apps
                      .map((a) => App(
...
